# grpc-cmake-example

./: .gitignore  README.md
client_async/: CMakeLists.txt  main.cpp
client_sync/: CMakeLists.txt
proto/: CMakeLists.txt  test.proto
server/: CMakeLists.txt  main.cpp
